[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]

[sub_resource type="GDScript" id=2]
script/source = "extends RigidBody2D


# Declare member variables here. Examples:
export var min_speed = 150  # Minimum speed range.
export var max_speed = 250  # Maximum speed range.


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[sub_resource type="PackedScene" id=3]
_bundled = {
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "Mob", "collision_mask", "gravity_scale", "script", "RigidBody2D", "ColorRect", "margin_right", "margin_bottom", "color", "__meta__", "CollisionShape2D", "position", "shape", "VisibilityNotifier2D", "rect" ),
"node_count": 4,
"node_paths": [  ],
"nodes": PoolIntArray( -1, -1, 4, 0, -1, 3, 1, 0, 2, 1, 3, 2, 0, 0, 0, 5, 5, -1, 4, 6, 3, 7, 3, 8, 4, 9, 5, 0, 0, 0, 10, 10, -1, 3, 11, 6, 12, 7, 9, 8, 0, 0, 0, 13, 13, -1, 3, 11, 9, 14, 10, 9, 11, 0 ),
"variants": [ 0, 0.0, SubResource( 2 ), 10.0, Color( 1, 0, 0, 1 ), {
"_edit_use_anchors_": false
}, Vector2( 5, 5 ), SubResource( 1 ), {
"_edit_group_": true
}, Vector2( 10.0154, 9.98748 ), Rect2( -10, -10, 10, 10 ), {
"_edit_group_": true
} ],
"version": 2
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = SubResource( 3 )

[node name="Players" type="Node" parent="."]

[node name="Player1" parent="Players" groups=[
"Players",
] instance=ExtResource( 2 )]
scale = Vector2( 10, 3 )

[node name="Player2" parent="Players" groups=[
"Players",
] instance=ExtResource( 2 )]
scale = Vector2( 10, 3 )
player_direction = 2

[node name="Player3" parent="Players" groups=[
"Players",
] instance=ExtResource( 2 )]
scale = Vector2( 10, 3 )
player_direction = 3

[node name="Player4" parent="Players" groups=[
"Players",
] instance=ExtResource( 2 )]
scale = Vector2( 10, 3 )
player_direction = 0

[node name="Positions" type="Node" parent="."]

[node name="StartPosition1" type="Position2D" parent="Positions" groups=[
"StartPositions",
]]
position = Vector2( 100, 100 )

[node name="StartPosition2" type="Position2D" parent="Positions" groups=[
"StartPositions",
]]
position = Vector2( 1820, 100 )

[node name="StartPosition3" type="Position2D" parent="Positions" groups=[
"StartPositions",
]]
position = Vector2( 1820, 980 )

[node name="StartPosition4" type="Position2D" parent="Positions" groups=[
"StartPositions",
]]
position = Vector2( 100, 980 )
[connection signal="hit" from="Players/Player1" to="." method="_on_Player_hit"]
